--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "jszip": "^3.10.1",
     "nodemailer": "^6.9.1"
   }
 }
