--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "adm-zip": "^0.5.10",
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
