--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "jszip": "^3.10.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1"
   }
 }
