--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "zip-folder": "^1.0.0"
   }
 }
