--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "zip-a-folder": "^1.1.5",
     "zip-folder": "^1.0.0"
   }
 }
